Prevent footer text from overflowing

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -4,6 +4,8 @@ footer {
   background: $brandblue;
   color: white;
   font-size: $medium;
+  word-break: break-all;
+
   .footerlayout {
     display: flex;
     justify-content: space-between;
